vlc_extensions should use vlc_player

As stated by vlc_extensions.h file, the core part of extension should use vlc_player and add its own callback to get information from the current media and media changes instead of relying on having the gui module injecting the playing input_item_t.

Will probably solve #11358 #13846 or simplify them.